--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,7 +1,7 @@
 {% extends 'layout.html.twig' %}
 
 {% block stylesheets %}
-<link rel="stylesheet" href="{{asset('assets/styles/connexion.css')}}">
+	<link rel="stylesheet" href="{{asset('assets/styles/connexion.css')}}">
 {% endblock %}
 
 {% block innerContent %}
@@ -22,14 +22,13 @@
 
 		<h2>Connexion</h2>
 
-		<input
-		type="email" value="{{ last_username }}" name="email" id="inputEmail" placeholder="Adresse mail *" size="30" autocomplete="email" required autofocus/>
+		<input type="email" value="{{ last_username }}" name="email" id="inputEmail" placeholder="Adresse mail *" size="30" autocomplete="email" required autofocus/>
 
 
 		<input
 		type="password" name="password" id="inputPassword" placeholder="Mot de passe *" size="30" autocomplete="current-password" required/>
 		{# 
-								    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required> #}
+										    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required> #}
 
 		<a class="mdp" href="#">Mot de passe oublié ?</a>
 
@@ -45,18 +44,18 @@
 		</div>
 
 		{#
-								        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-								        See https://symfony.com/doc/current/security/remember_me.html
-								
-								        <div class="checkbox mb-3">
-								            <label>
-								                <input type="checkbox" name="_remember_me"> Remember me
-								            </label>
-								        </div>
-								    #}
+										        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+										        See https://symfony.com/doc/current/security/remember_me.html
+										
+										        <div class="checkbox mb-3">
+										            <label>
+										                <input type="checkbox" name="_remember_me"> Remember me
+										            </label>
+										        </div>
+										    #}
 
 		{# <button class="btn btn-lg btn-primary" type="submit">
-								        Sign in
-								    </button> #}
+										        Sign in
+										    </button> #}
 	</form>
 {% endblock %}
